<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mukta_bold"
            android:text="@string/txtvw12"
            android:textSize="27dp"
            android:textColor="@color/white"/>

        <TextView
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mukta_regular"
            android:text="@string/txtvw2"
            android:textSize="14dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/MidBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TopBar"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:inputType="textEmailAddress"
            android:elevation="10dp"
            android:padding="13dp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:hint="@string/txtvw13"
            android:textColorHint="@color/grey_500"/>

        <EditText
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:elevation="10dp"
            android:padding="13dp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:hint="@string/txtvw5"
            android:textColorHint="@color/grey_500"/>

        <EditText
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:padding="13dp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:hint="@string/txtvw6"
            android:textColorHint="@color/grey_500"/>


    </LinearLayout>

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_below="@+id/MidBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/Bottombar">


        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/cutom_button"
            android:padding="10dp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/txtvw11"
            android:textAllCaps="false"
            android:textColor="@color/white"/>


        <LinearLayout
            android:gravity="center"
            android:padding="5dp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginRight="5dp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_regular"
                android:text="@string/txtvw15"
                android:textSize="14dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_regular"
                android:text="@string/txtvw8"
                android:textSize="14dp"
                android:textColor="@color/blue_500"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>