<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wallpaper"
        android:scaleType="centerCrop"/>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:textSize="35dp"
                android:fontFamily="@font/mukta_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtvw1"/>

            <TextView
                android:textColor="@color/white"
                android:textSize="14dp"
                android:fontFamily="@font/mukta_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtvw2"/>


        </LinearLayout>


        <Button
            android:id="@+id/nextB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txtvw3"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>



</RelativeLayout>